--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,6 +2,8 @@
     display: flex;
     min-height: calc(100vh - 91px);
     position: relative;
+    align-items: center;
+    
 }
 
 #cta {
@@ -9,8 +11,8 @@
     display: flex;
     flex-direction: column;
     gap: 28px;
-    margin-top: 10%;
     z-index: 2;
+    
 }
 
 #cta .title {
@@ -29,27 +31,32 @@
 #cta_buttons {
     display: flex;
     gap: 24px;
+    justify-content: center;
 }
 
 #cta_buttons a {
     text-decoration: none;
-    color: var(--color-primary-3)
+    color: var(--color-primary-3);
 }
 
 #phone_button {
     display: flex;
-    gap: 8px;
+    gap: 20px;
     align-items: center;
     background-color: var(--color-primary-6);
-    padding: 8px 14px;
+    padding: 10px 30%;
     font-weight: 500;
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
 }
 
+#home .social-media-buttons {
+    justify-content: center;
+}
+
 #banner {
     width: 50%;
-    align-items: start;
+    align-items: center;
     display: flex;
     gap: 50px;
     z-index: 3;
@@ -60,23 +67,19 @@
 #banner img {
     width: 90%;
     align-items: center;
+    justify-content: center;
     display: flex;
-    gap: 50px;
     z-index: 3;
-    margin-left: 5%;
-    margin-top: 2%;
 }
 
-.shape {
+#banner .shape {
     background-color: var(--color-primary-3);
-    width: 33%;
-    height: 70%;
+    width: 35%;
+    height: 78%;
     position: absolute;
     border-radius: 5% 50% 25% 20%;
-    top: 0;
-    right: 0.5;
     z-index: 1;
-    margin-top: 3%;
+    right: 54%;
 }
 
 @media screen and (max-width: 1170px) {
